--- a/siga-server/package.json
+++ b/siga-server/package.json
@@ -4,7 +4,7 @@
   "description": "Servidor do Siga",
   "main": "siga-server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run tsc && jasmine --config=./spec/support/jasmine.json",
     "tsc": "./node_modules/typescript/bin/tsc",
     "start": "npx nodemon --exec ts-node --files siga-server.ts"
   },
@@ -18,6 +18,12 @@
   "devDependencies": {
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "jasmine": "^2.8.0",
+    "@types/jasmine": "^2.8.9",
+    "jasmine-promises": "^0.4.1",
+    "request": "^2.34",
+    "request-promise": "^4.2.2",
+    "@types/request-promise": "^4.1.38"
   }
 }
