--- a/siga-gui/angular.json
+++ b/siga-gui/angular.json
@@ -101,6 +101,18 @@
             ],
             "scripts": []
           }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "e2e/protractor.conf.js",
+            "devServerTarget": "siga-gui:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "siga-gui:serve:production"
+            }
+          }
         }
       }
     }
