--- a/siga-gui/package.json
+++ b/siga-gui/package.json
@@ -32,7 +32,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "~8.9.4",
     "jasmine-core": "~4.0.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -41,7 +41,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "protractor": "~5.4.0",
+    "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "typescript": "~4.6.2"
   }
