--- a/siga-gui/angular.json
+++ b/siga-gui/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ta-gui": {
+    "siga-gui": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
