--- a/siga-server/package.json
+++ b/siga-server/package.json
@@ -5,7 +5,7 @@
   "main": "siga-server.js",
   "scripts": {
     "test": "npm run tsc && jasmine --config=./spec/support/jasmine.json",
-    "tsc": "./node_modules/typescript/bin/tsc",
+    "tsc": "tsc",
     "start": "npx nodemon --exec ts-node --files siga-server.ts"
   },
   "license": "MIT",
